路由配置修改 config.lazylod.js是路由需要加载的静态css、js的配置文件 config.router.js为路由配置文件

--- a/components/stylesheets/ace/ace-my-skins.css
+++ b/components/stylesheets/ace/ace-my-skins.css
@@ -3,7 +3,14 @@
 }
 
 .myAceSkin .navbar {
-    background: #222a2d
+    background-color: #222a2d
+}
+
+.myAceSkin .ace-nav>li>a{
+    background-color: transparent;
+}
+.myAceSkin .ace-nav>li.open>a{
+    background-color: rgba(128, 128, 128, 0.4) !important;
 }
 
 .myAceSkin .sidebar, .myAceSkin .sidebar:before {
